--- a/Neo4j/pom.xml
+++ b/Neo4j/pom.xml
@@ -29,7 +29,18 @@
 			<artifactId>neo4j-ogm-http-driver</artifactId>
 			<version>${neo4j.version}</version>
 		</dependency>
-
+		<dependency>
+		    <groupId>org.neo4j</groupId>
+		    <artifactId>neo4j-ogm-embedded-driver</artifactId>
+		    <version>${neo4j.version}</version>
+		    <scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.6.2</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
