create school test data
to measure in read/write/query possabilities and speed

--- a/Neo4j/pom.xml
+++ b/Neo4j/pom.xml
@@ -35,10 +35,22 @@
 		    <version>${neo4j.version}</version>
 		    <scope>test</scope>
 		</dependency>
+		<!-- <dependency>
+           <groupId>org.neo4j</groupId>
+           <artifactId>neo4j-ogm-test</artifactId>
+           <version>${neo4j.version}</version>
+           <type>test-jar</type>
+           <scope>test</scope>
+        </dependency> -->
 		<dependency>
 		    <groupId>com.google.code.gson</groupId>
 		    <artifactId>gson</artifactId>
 		    <version>2.6.2</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-lang3</artifactId>
+		    <version>3.4</version>
 		</dependency>
 		
 		<dependency>
