use bolt driver
try to enhance bulk operation performance: use native bolt protocol

--- a/Neo4j/src/main/resources/ogm.properties
+++ b/Neo4j/src/main/resources/ogm.properties
@@ -1,2 +1,2 @@
-driver=org.neo4j.ogm.drivers.http.driver.HttpDriver
-URI=http://neo4j:neo4j@localhost:7474
+driver=org.neo4j.ogm.drivers.bolt.driver.BoltDriver
+URI=bolt://neo4j:neo4j@localhost:7687
