--- a/Neo4j/pom.xml
+++ b/Neo4j/pom.xml
@@ -30,6 +30,11 @@
 			<version>${neo4j.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.neo4j</groupId>
+			<artifactId>neo4j-ogm-bolt-driver</artifactId>
+			<version>${neo4j.version}</version>
+		</dependency>
+		<dependency>
 		    <groupId>org.neo4j</groupId>
 		    <artifactId>neo4j-ogm-embedded-driver</artifactId>
 		    <version>${neo4j.version}</version>
