--- a/postgres/pom.xml
+++ b/postgres/pom.xml
@@ -58,6 +58,11 @@
 			<version>2.6.2</version>
 		</dependency>
 		<dependency>
+  			<groupId>com.cedarsoftware</groupId>
+  			<artifactId>json-io</artifactId>
+ 			<version>4.4.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<version>9.4.1208.jre7</version>
