--- a/postgres/.project
+++ b/postgres/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>java-object-store</name>
+	<name>postgres</name>
 	<comment></comment>
 	<projects>
 	</projects>
